	(sepermit_unlock): Cast fcntl() and close() calls to void.

	* modules/pam_pwhistory/opasswd.c (check_old_password): Do not
	needlessly call strdupa().
	(save_old_password): Avoid memleaks in error paths. Avoid memleak of
	buf. Make the opasswd entry parsing more robust.
	* modules/pam_pwhistory/pam_pwhistory.8.xml: Document the
	special meaning of remember=0.

2011-06-14  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Check for libtirpc by default.
	* libpam/Makefile.am: Add support for libtirpc.
	* modules/pam_access/Makefile.am: Likewise.
	* modules/pam_unix/Makefile.am: Likewise.
	* modules/pam_unix/pam_unix_passwd.c: Change ifdefs for
	new libtirpc support.
	* modules/pam_unix/yppasswd_xdr.c: Only compile if we have rpc/rpc.h.

2011-06-13  Tomas Mraz  <tm@t8m.info>

	* modules/pam_securetty/pam_securetty.c (securetty_perform_check): Test
	also whether the tty is in the /sys/class/tty/console/active file.
	* modules/pam_securetty/pam_securetty.8.xml: Document the new check of
	/sys/class/tty/console/active/file.

2011-06-07  Tomas Mraz  <tm@t8m.info>

	* modules/pam_namespace/pam_namespace.c (root_shared): New
	function to detect shared / mount.
	(pam_sm_open_session): Call the root_shared() and enable
	private mounts based on that.
	* modules/pam_namespace/pam_namespace.8.xml: Document the
	automatic detection of shared / mount.

2011-06-06  Tomas Mraz  <tm@t8m.info>

	* modules/pam_group/pam_group.c (shift_bytes): Removed.
	(shift_buf, trim_spaces): Added new functions.
	(read_field): Thorough rewrite of the parsing.
	(check_account): read_field() now uses state information. No
	extra read_field() call at the end of configuration line.
	* modules/pam_time/pam_time.c (shift_bytes): Removed.
	(shift_buf, trim_spaces): Added new functions.
	(read_field): Thorough rewrite of the parsing.
	(check_account): read_field() now uses state information. No
	extra read_field() call at the end of configuration line.
